added SVG and details activity

--- a/Life Hacks/App/view/index.html
+++ b/Life Hacks/App/view/index.html
@@ -107,14 +107,25 @@
                         </li>
                     </ul>
 
-                    <h2>Most Viewed Articls</h2>
-                    <ol type="I">
-                        <li>
-                            Instant Gratification Is Stopping You From Reaching Your Goals!
-                        </li>
-                        <li>Stop Juggling Between Work And Life IP Project Winners</li>
-                    </ol>
+					<details>
+						<summary>
+							<b>Most Viewed Articls</b>
+						</summary>
+						<ol type="I">
+							<li>
+								Instant Gratification Is Stopping You From Reaching Your Goals!
+							</li>
+							<li>Stop Juggling Between Work And Life IP Project Winners</li>
+						</ol>
+					</details>
 
+					<svg width="100%" height="100">
+						<rect width="100%" height="100%" fill="dodgerblue"/>
+						<text x="50%" y="50%" fill="white" font-size="26" text-anchor="middle">
+							Expand by clicking 🔽
+						</text>
+					</svg>
+						
                     <h2>IP Project Winners</h2>
                     <pre>
 ---------------------------------
