--- a/Life Hacks/App/view/index.html
+++ b/Life Hacks/App/view/index.html
@@ -120,9 +120,9 @@
 					</details>
 
 					<svg width="100%" height="100">
-						<rect width="100%" height="100%" fill="dodgerblue"/>
-						<text x="50%" y="50%" fill="white" font-size="26" text-anchor="middle">
-							Expand by clicking 🔽
+						<rect width="100%" height="100%" rx="15" ry="15" fill="dodgerblue"/>
+						<text x="50%" y="57%" fill="white" font-size="26"  text-anchor="middle">
+							SVG is C👀L 😎
 						</text>
 					</svg>
 						
