worked on Exerxise 5: JS Events

--- a/Life Hacks/App/view/auth/register.html
+++ b/Life Hacks/App/view/auth/register.html
@@ -12,7 +12,7 @@
 			<td width="10%"></td>
 			<td>
 				<a href="../">
-					<img src="/Life Hacks/resources/images/logo_gold.png"" alt=" life hacks logo" height="70" />
+					<img src="/resources/images/logo_gold.png"" alt=" life hacks logo" height="70" />
 				</a>
 			</td>
 			<td align="right">
