--- a/Life Hacks/App/view/auth/signin.html
+++ b/Life Hacks/App/view/auth/signin.html
@@ -4,15 +4,34 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Life Hacks Home</title>
+	<script src="/resources/js/signin.js" defer></script>
+	<style>
+		#message {
+			background-color: rgb(102, 194, 102);
+			border: 1px solid green;
+			color: rgb(2, 32, 2);
+			border-radius: 5px;
+			display: none;
+			width: 250px;
+			font-family: 'Courier New', Courier, monospace;
+			padding: 5px 10px;
+			margin: 5px;
+		}
+		.focused {
+			border-radius: 5px;
+			outline: 3px double tomato;
+			border: 1px solid red;
+		}
+	</style>
 </head>
 
-<body>
+<body onload="handleLoad()">
 	<table width="100%">
 		<tr>
 			<td width="10%"></td>
 			<td>
 				<a href="../">
-					<img src="/Life Hacks/resources/images/logo_gold.png"" alt=" life hacks logo" height="70" />
+					<img src="/resources/images/logo_gold.png"" alt=" life hacks logo" height="70" />
 				</a>
 			</td>
 			<td align="right">
@@ -37,7 +56,7 @@
 				<!-- main content -->
 				<h1>Sign In</h1>
 				<p>Sign in and get full access to our resources</p>
-				<form>
+				<form  onsubmit="alert('Submitting...')" >
 					<label for="username">
 						Username:
 					</label>
@@ -50,6 +69,9 @@
 					<br>
 					<input type="submit" value="Sign in">
 				</form>
+				<div id="message">
+					
+				</div>
 			</td>
 
 			<td width="20%" valign="top">
