--- a/Life Hacks/App/view/frame.html
+++ b/Life Hacks/App/view/frame.html
@@ -11,7 +11,7 @@
 		<tr>
 			<td width="10%"></td>
 			<td>
-				<img src="/Life Hacks/resources/images/logo_gold.png" alt="life hacks logo" height="70" />
+				<img src="/resources/images/logo_gold.png" alt="life hacks logo" height="70" />
 			</td>
 			<td align="right">
 				<a href="">Podocast</a> | <a href="">Articles</a> |
