added onplaying event on video

--- a/Life Hacks/App/view/index.html
+++ b/Life Hacks/App/view/index.html
@@ -97,7 +97,7 @@
 
 				<h3>Pick of The Week</h3>
 				<h1>24 Hours A Day</h1>
-				<video controls width="100%" onplay="handlePlay()" onpause="handlePause()">
+				<video controls width="100%" onplay="handlePlay()" onpause="handlePause()" onplaying="console.log('The videos is being played')">
 					<source src="/resources/video/24_HOURS.mp4" />
 					Video is not supported on your browser
 				</video>
